[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Characters/NewPlayer.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Characters/CharacterAnim.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Scenes/Characters/SoundLocations.tscn" type="PackedScene" id=3]
[ext_resource path="res://Textures/Characters/PlayerBase.png" type="Texture" id=4]
[ext_resource path="res://Scenes/ViewCone/FocusDetector.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 18.2617
height = 56.7352

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 674.238, 328.129 )
collision_layer = 4
script = ExtResource( 1 )

[node name="SoundLocations" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprites" type="Node2D" parent="."]
position = Vector2( 0, -8 )

[node name="BaseS" type="Sprite" parent="Sprites"]
texture = ExtResource( 4 )

[node name="LimbsAS" type="AnimatedSprite" parent="Sprites"]
frames = ExtResource( 2 )
animation = "Idle"
playing = true

[node name="CamPivot" type="Position2D" parent="."]

[node name="CamTarget" type="Position2D" parent="CamPivot"]
position = Vector2( 272.016, 0 )

[node name="FocusDetector" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, -31 )

[node name="Interactor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactor"]
shape = SubResource( 1 )
[connection signal="area_entered" from="Interactor" to="." method="_on_Interactor_area_entered"]
[connection signal="area_exited" from="Interactor" to="." method="_on_Interactor_area_exited"]
